--- a/frontend/bid4free/css/bid4Free.css
+++ b/frontend/bid4free/css/bid4Free.css
@@ -116,9 +116,9 @@ bid4free .cardInfo md-icon {
   height: 16px;
 }
 
-/** Project Summary ***************************************************************************************************/
+/** model Summary ***************************************************************************************************/
 
-.projectSummaryInput {
+.modelSummaryInput {
   padding: 0 10px;
 }
 
