--- a/frontend/pricing/jade/pricing.jade
+++ b/frontend/pricing/jade/pricing.jade
@@ -15,7 +15,7 @@
 					h3 200 MB Server Space
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
-					h3 Demo Project
+					h3 Demo Model
 			md-divider
 			div(layout="row", layout-align="center center")
 				md-button.md-raised.md-accent(ng-click="vm.showPage('signUp')") Sign Up
@@ -37,13 +37,13 @@
 					h3 10 GB Server Space
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
-					h3 Unlimited Projects
+					h3 Unlimited Models
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
 					h3 Collaboration
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
-					h3 Demo Project
+					h3 Demo Model
 			md-divider
 			div(layout="row", layout-align="center center")
 				md-button.md-raised.md-accent(ng-click="vm.showPage('signUp', true)") Sign Up
@@ -67,7 +67,7 @@
 					h3 Private Domain
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
-					h3 Unlimited Projects
+					h3 Unlimited Models
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
 					h3 Custom Development
