--- a/frontend/project/jade/viewermanager.jade
+++ b/frontend/project/jade/viewermanager.jade
@@ -3,7 +3,7 @@ div(ng-repeat="(name, viewer) in vm.viewers")
 		node="node"
 		name="{{viewer.name}}"
 		account = "{{viewer.account}}"
-		project = "{{viewer.project}}"
+		model = "{{viewer.model}}"
 		branch = "{{viewer.branch}}"
 		revision = "{{viewer.revision}}"
 		up = "{{viewer.up}}"
