--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -1,41 +1,41 @@
 .userContent
 
-	input#existingProjectFileUploader(type="file")
-	input#newProjectFileUploader(type="file")
+	input#existingModelFileUploader(type="file")
+	input#newModelFileUploader(type="file")
 
-	md-list#accountList(flex, ng-if="vm.projectsExist")
+	md-list#accountList(flex, ng-if="vm.modelsExist")
 		// Accounts
 		div(ng-repeat="account in vm.accounts", ng-if="account.showAccount")
 			div(layout="row", layout-align="space-between")
 				md-list-item(flex)
-					.account(ng-click="vm.toggleProjectsList($index)", layout="row", layout-align="start center", md-ink-ripple, flex)
+					.account(ng-click="vm.toggleModelsList($index)", layout="row", layout-align="start center", md-ink-ripple, flex)
 						md-button.md-icon-button(aria-label="Folder")
-							md-icon.angular-material-icons {{account.showProjectsIcon}}
+							md-icon.angular-material-icons {{account.showModelsIcon}}
 						p {{account.account}}
-						md-icon.angular-material-icons.accountProjectsSharedIcon(ng-if="!account.canAddProject") group
-				.accountRight(ng-if="account.canAddProject")
-					md-button.md-icon-button(aria-label="New project", ng-click="vm.newProject($event, account.account)")
+						md-icon.angular-material-icons.accountModelsSharedIcon(ng-if="!account.canAddModel") group
+				.accountRight(ng-if="account.canAddModel")
+					md-button.md-icon-button(aria-label="New model", ng-click="vm.newmodel($event, account.account)")
 						md-icon.angular-material-icons.md-accent playlist_add
 
-			// Projects
-			md-list.projects(ng-if="account.showProjects")
-				account-project(
-				ng-repeat="project in account.models"
+			// Models
+			md-list.models(ng-if="account.showModels")
+				account-model(
+				ng-repeat="model in account.models"
 				account="account.name"
 				is-account-admin="account.isAdmin"
-				project="project"
+				model="model"
 				user-account="vm.account"
-				on-upload-file="vm.uploadFile(project)"
+				on-upload-file="vm.uploadFile(model)"
 				uploaded-file="vm.uploadedFile"
-				project-to-upload="vm.projectToUpload"
+				model-to-upload="vm.modelToUpload"
 				on-show-page="vm.showPage(page, callingPage)"
-				on-setup-delete-project="vm.setupDeleteProject(event, project, account)",
+				on-setup-delete-model="vm.setupDeleteModel(event, model, account)",
 				quota="vm.quota"
 				subscriptions="vm.subscriptions")
 			md-divider
 
 
-	div(ng-if="!vm.projectsExist")
+	div(ng-if="!vm.modelsExist")
 		.cardInfo(layout="row", layout-align="center center")
 			p {{vm.info}}
 			md-progress-circular(md-diameter="20px", ng-if="vm.showProgress", md-mode="indeterminate")
