--- a/frontend/bid4free/jade/bidProjectSummary.jade
+++ b/frontend/bid4free/jade/bidProjectSummary.jade
@@ -2,7 +2,7 @@
 	md-toolbar
 		.md-toolbar-tools
 			h2
-				span Project Summary
+				span model Summary
 			span(flex)
 			h2 ({{vm.Auth.username}})
 			md-button.md-icon-button(aria-label="Home", ng-click="vm.home($event)")
@@ -12,28 +12,28 @@
 			md-list-item.md-2-line
 				div.md-list-item-text
 					h3 Name
-					p {{vm.projectSummary.name}}
+					p {{vm.modelSummary.name}}
 			md-list-item.md-2-line
 				div.md-list-item-text
 					h3 Site
-					p {{vm.projectSummary.site}}
+					p {{vm.modelSummary.site}}
 			md-list-item.md-2-line
 				div.md-list-item-text
 					h3 Client
-					p {{vm.projectSummary.client}}
+					p {{vm.modelSummary.client}}
 			md-list-item.md-2-line
 				div.md-list-item-text
 					h3 Code
-					p {{vm.projectSummary.code}}
+					p {{vm.modelSummary.code}}
 			md-list-item.md-2-line
 				div.md-list-item-text
 					h3 Budget
-					p {{vm.projectSummary.budget}}
+					p {{vm.modelSummary.budget}}
 			md-list-item.md-2-line
 				div.md-list-item-text
 					h3 Completed by
-					p {{vm.projectSummary.completedByPretty}}
+					p {{vm.modelSummary.completedByPretty}}
 			md-list-item.md-2-line
 				div.md-list-item-text
 					h3 Contact
-					p {{vm.projectSummary.contact}}
+					p {{vm.modelSummary.contact}}
