--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -15,7 +15,7 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	issues-list(
 	ng-switch-when="showIssues"
 	account="vm.account"
-	project="vm.project"
+	model="vm.model"
 	all-issues="vm.issues"
 	filter-text="vm.filterText"
 	send-event="vm.sendEvent(type, value)"
@@ -26,7 +26,7 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	keys-down="vm.keysDown"
 	content-height="vm.setContentHeight(height)"
 	menu-option="vm.selectedMenuOption"
-	user-job="vm.projectUserJob"
+	user-job="vm.modelUserJob"
 	tree-map="vm.treeMap"
 	selected-issue="vm.selectedIssue"
 	display-issue="vm.displayIssue"
@@ -38,19 +38,19 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	issue-comp(
 	ng-switch-when="showIssue"
 	account="vm.account"
-	project="vm.project"
+	model="vm.model"
 	data="vm.selectedIssue"
 	keys-down="vm.keysDown"
 	exit="vm.editIssueExit(issue)"
 	send-event="vm.sendEvent(type, value)"
-	project-settings="vm.projectSettings"
+	model-settings="vm.modelSettings"
 	event="vm.event"
 	issue-created="vm.issueCreated(issue)"
 	content-height="vm.setContentHeight(height)"
 	selected-objects="vm.selectedObjects"
 	revision="vm.revision"
 	set-initial-selected-objects="vm.setInitialSelectedObjects({selectedObjects: selectedObjects})"
-	user-job="vm.projectUserJob"
+	user-job="vm.modelUserJob"
 	available-jobs="vm.availableJobs")
 
 
