--- a/frontend/account/jade/accountModels.jade
+++ b/frontend/account/jade/accountModels.jade
@@ -3,21 +3,23 @@
 	input#existingModelFileUploader(type="file")
 	input#newModelFileUploader(type="file")
 
+	md-list#accountList(flex, ng-if="vm.modelsExist")
+		// Accounts
+		div(ng-repeat="account in vm.accounts", ng-if="account.showAccount")
+			div(layout="row", layout-align="space-between")
+				md-list-item(flex)
+					.account(ng-click="vm.toggleModelsList($index)", layout="row", layout-align="start center", md-ink-ripple, flex)
+						md-button.md-icon-button(aria-label="Folder")
+							md-icon.angular-material-icons {{account.showModelsIcon}}
+						p {{account.account}}
+						md-icon.angular-material-icons.accountModelsSharedIcon(ng-if="!account.canAddModel") group
+				.accountRight(ng-if="account.canAddModel")
+					md-button.md-icon-button(aria-label="New model", ng-click="vm.newmodel($event, account.account)")
+						md-icon.angular-material-icons.md-accent playlist_add
 
-	// Accounts
-	div(ng-repeat="account in vm.accounts", ng-if="account.showAccount")
-
-		div(layout="row", layout-align="space-between")
-			md-list-item(flex)
-				.account(ng-click="vm.toggleModelsList($index)", layout="row", layout-align="start center", md-ink-ripple, flex)
-					md-button.md-icon-button(aria-label="Folder")
-						md-icon.angular-material-icons {{account.showModelsIcon}}
-					p {{account.account}}
-					md-icon.angular-material-icons.accountModelsSharedIcon(ng-if="!account.canAddModel") group
-
-		// Models
-		md-list.models(ng-if="account.showModels")
-			account-model(
+			// Models
+			md-list.models(ng-if="account.showModels")
+				account-model(
 				ng-repeat="model in account.models"
 				account="account.name"
 				is-account-admin="account.isAdmin"
@@ -30,17 +32,7 @@
 				on-setup-delete-model="vm.setupDeleteModel(event, model, account)",
 				quota="vm.quota"
 				subscriptions="vm.subscriptions")
-
-		md-divider
-
-		md-list.federations(ng-if="account.showModels")
-			account-federations(
-				account="vm.account"
-				accounts="vm.accounts"
-				on-show-page="vm.showPage(page, callingPage, data)"
-				quota="vm.quota"
-				subscriptions="vm.subscriptions")
-
+			md-divider
 
 
 	div(ng-if="!vm.modelsExist")
