--- a/frontend/account/jade/accountModels.jade
+++ b/frontend/account/jade/accountModels.jade
@@ -6,6 +6,7 @@
 	md-list#accountList(flex, ng-if="vm.modelsExist")
 		// Accounts
 		div(ng-repeat="account in vm.accounts", ng-if="account.showAccount")
+
 			div(layout="row", layout-align="space-between")
 				md-list-item(flex)
 					.account(ng-click="vm.toggleModelsList($index)", layout="row", layout-align="start center", md-ink-ripple, flex)
@@ -13,26 +14,52 @@
 							md-icon.angular-material-icons {{account.showModelsIcon}}
 						p {{account.account}}
 						md-icon.angular-material-icons.accountModelsSharedIcon(ng-if="!account.canAddModel") group
-				.accountRight(ng-if="account.canAddModel")
+				//.accountRight(ng-if="account.canAddModel")
 					md-button.md-icon-button(aria-label="New model", ng-click="vm.newmodel($event, account.account)")
 						md-icon.angular-material-icons.md-accent playlist_add
 
-			// Models
-			md-list.models(ng-if="account.showModels")
-				account-model(
-				ng-repeat="model in account.models"
-				account="account.name"
-				is-account-admin="account.isAdmin"
-				model="model"
-				user-account="vm.account"
-				on-upload-file="vm.uploadFile(model)"
-				uploaded-file="vm.uploadedFile"
-				model-to-upload="vm.modelToUpload"
-				on-show-page="vm.showPage(page, callingPage)"
-				on-setup-delete-model="vm.setupDeleteModel(event, model, account)",
-				quota="vm.quota"
-				subscriptions="vm.subscriptions")
-			md-divider
+			// Projects
+			md-list.models()
+				md-list-item(flex, md-ink-ripple)
+					md-button.md-icon-button(aria-label="Folder")
+							md-icon.angular-material-icons {{account.showModelsIcon}} 
+					p Projects
+					
+				// Models and Federations
+				md-list.models(ng-if="account.showModels")
+					md-list-item(flex)
+						md-button.md-icon-button(aria-label="Folder")
+								md-icon.angular-material-icons {{account.showModelsIcon}} 
+						p Models
+						
+					account-model(
+					ng-repeat="model in account.models"
+					account="account.name"
+					is-account-admin="account.isAdmin"
+					model="model"
+					user-account="vm.account"
+					on-upload-file="vm.uploadFile(model)"
+					uploaded-file="vm.uploadedFile"
+					model-to-upload="vm.modelToUpload"
+					on-show-page="vm.showPage(page, callingPage)"
+					on-setup-delete-model="vm.setupDeleteModel(event, model, account)",
+					quota="vm.quota"
+					subscriptions="vm.subscriptions")
+
+					md-list-item(flex)
+						md-button.md-icon-button(aria-label="Folder")
+							md-icon.angular-material-icons {{account.showModelsIcon}} 
+						p Federations
+					
+					account-federations(
+					account="account"
+					)
+					p(ng-if="!account.fedModels.length") No federations created
+			
+		md-divider
+		div(layout="row" flex layout-align="end center")
+			md-button.md-accent.md-fab.md-mini(aria-label="Add")
+				md-icon.angular-material-icons add
 
 
 	div(ng-if="!vm.modelsExist")
